--- a/adrtfcodesynth.ipynb
+++ b/adrtfcodesynth.ipynb
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d5a3eaf6-8864-4d10-82d1-55787b88f46d",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1378,7 @@
     "    return adr_dict\n",
     "\n",
     "# Collect all ADR_*.txt files\n",
-    "adr_files = sorted(glob.glob(\"serverlessmike_ADR_*.txt\"))\n",
+    "adr_files = sorted(glob.glob(repoExport + \"ADR_*.txt\"))\n",
     "\n",
     "adr_json_list = []\n",
     "\n",
