--- a/src/main_workflow.ipynb
+++ b/src/main_workflow.ipynb
@@ -1,12 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "title",
+   "metadata": {},
+   "source": [
+    "# ADR Code Synth - Workflow Testing Notebook\n",
+    "\n",
+    "This notebook demonstrates and tests the ADR (Architecture Decision Record) generation workflow.\n",
+    "\n",
+    "## Overview\n",
+    "\n",
+    "The ADR Code Synth application uses LangGraph to orchestrate a multi-step workflow that:\n",
+    "1. **Generates architectural context** from source code\n",
+    "2. **Analyzes Terraform files** for infrastructure patterns (minor and major versions)\n",
+    "3. **Validates with source code** to ensure accurate analysis\n",
+    "4. **Compares architectures** between versions\n",
+    "5. **Generates ADRs** documenting key architectural decisions\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "- OpenAI API key configured in `.env` file\n",
+    "- Project input files in `project-inputs/` directory\n",
+    "- Knowledge base file in `knowledge/` directory\n",
+    "\n",
+    "## Usage\n",
+    "\n",
+    "- **Full workflow**: Run cells in order from 1-9\n",
+    "- **Individual node testing**: Run cells in section 4 to test each node independently"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fb5c1ef6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. Setup and Configuration\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "from datetime import datetime\n",
@@ -99,23 +130,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f100fcc9",
+   "id": "section2",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "\n",
+    "## Project Initialization\n",
+    "\n",
+    "This section loads the project configuration and creates the workflow graph."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7f00ce46",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load project configuration from YAML\n",
+    "# Available projects: abelaa, chef, serverlessmike\n",
+    "\n",
     "project_dir = \"../project-inputs/abelaa\"\n",
-    "# project_dir = \"../project-inputs/chef\"\n",
-    "# project_dir = \"../project-inputs/serverlessmike\"\n"
+    "# project_dir = \"../project-inputs/chef\"\n",
+    "# project_dir = \"../project-inputs/serverlessmike\"\n"
    ]
   },
   {
@@ -292,7 +329,8 @@
    "id": "b88f3541",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "## Individual Node Testing\n"
    ]
   },
   {
